--- a/index.html
+++ b/index.html
@@ -434,16 +434,16 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-beetle.jpg" class="thumb-link" title="Restore" data-size="1050x700">
-                                <img src="images/portfolio/beetle.jpg" 
-                                     srcset="images/portfolio/beetle.jpg 1x, images/portfolio/beetle@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-mini.jpg" class="thumb-link" title="Restore" data-size="1050x700">
+                                <img src="images/portfolio/mini.jpg" 
+                                     srcset="images/portfolio/mini.jpg 1x, images/portfolio/mini@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Work on My Mini
+                                Work on My MINI
                             </h3>
                             <p class="item-folio__cat">
                                 Restore
@@ -465,9 +465,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-lighthouse.jpg" class="thumb-link" title="Sport" data-size="1050x700">
-                                <img src="images/portfolio/lighthouse.jpg" 
-                                     srcset="images/portfolio/lighthouse.jpg 1x, images/portfolio/lighthouse@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-workout.jpg" class="thumb-link" title="Sport" data-size="1050x700">
+                                <img src="images/portfolio/workout.jpg" 
+                                     srcset="images/portfolio/workout.jpg 1x, images/portfolio/workout@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -482,7 +482,7 @@
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
-                            <i class="im im-link"></i>
+                            <i class="im im-magnifier-plus"></i>
                         </a>
 
                         <div class="item-folio__caption">
@@ -513,7 +513,7 @@
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
-                            <i class="im im-link"></i>
+                            <i class="im im-magnifier-plus"></i>
                         </a>
 
                         <span class="item-folio__caption">
@@ -527,9 +527,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-woodcraft.jpg" class="thumb-link" title="Friendship" data-size="1050x700">
-                                <img src="images/portfolio/woodcraft.jpg"
-                                     srcset="images/portfolio/woodcraft.jpg 1x, images/portfolio/woodcraft@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-friendship.jpg" class="thumb-link" title="Friendship" data-size="1050x700">
+                                <img src="images/portfolio/friendship.jpg"
+                                     srcset="images/portfolio/friendship.jpg 1x, images/portfolio/friendship@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -544,7 +544,7 @@
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
-                            <i class="im im-link"></i>
+                            <i class="im im-magnifier-plus"></i>
                         </a>
 
                         <span class="item-folio__caption">
@@ -558,9 +558,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-skaterboy.jpg" class="thumb-link" title="Nature" data-size="1050x700">
-                                <img src="images/portfolio/skaterboy.jpg"
-                                     srcset="images/portfolio/skaterboy.jpg 1x, images/portfolio/skaterboy@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-dog.jpg" class="thumb-link" title="Nature" data-size="1050x700">
+                                <img src="images/portfolio/dog.jpg"
+                                     srcset="images/portfolio/dog.jpg 1x, images/portfolio/dog@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -575,7 +575,7 @@
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
-                            <i class="im im-link"></i>
+                            <i class="im im-magnifier-plus"></i>
                         </a>
 
                         <span class="item-folio__caption">
@@ -589,9 +589,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-liberty.jpg" class="thumb-link" title="Travels" data-size="1050x700">
-                                <img src="images/portfolio/liberty.jpg"
-                                     srcset="images/portfolio/liberty.jpg 1x, images/portfolio/liberty@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-travels.jpg" class="thumb-link" title="Travels" data-size="1050x700">
+                                <img src="images/portfolio/travels.jpg"
+                                     srcset="images/portfolio/travels.jpg 1x, images/portfolio/travels@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -606,7 +606,7 @@
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
-                            <i class="im im-link"></i>
+                            <i class="im im-magnifier-plus"></i>
                         </a>
 
                         <span class="item-folio__caption">
@@ -620,9 +620,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-minimalismo.jpg" class="thumb-link" title="Technology" data-size="1050x700">
-                                <img src="images/portfolio/minimalismo.jpg"
-                                     srcset="images/portfolio/minimalismo.jpg 1x, images/portfolio/minimalismo@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-tech.jpg" class="thumb-link" title="Technology" data-size="1050x700">
+                                <img src="images/portfolio/tech.jpg"
+                                     srcset="images/portfolio/tech.jpg 1x, images/portfolio/tech@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -637,7 +637,7 @@
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
-                            <i class="im im-link"></i>
+                            <i class="im im-magnifier-plus"></i>
                         </a>
 
                         <span class="item-folio__caption">
@@ -663,16 +663,16 @@
                                 Capture unique moments
                             </h3>
                             <p class="item-folio__cat">
-                                Photography
+                                Shutterbug
                             </p>
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
-                            <i class="im im-link"></i>
+                            <i class="im im-magnifier-plus"></i>
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Photography</p>
+                            <p>Shutterbug</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -681,7 +681,7 @@
             </div>
         </div> <!-- end masonry -->
 
-    </section> <!-- end works -->
+    </section> <!-- end softakills -->
 
 
 
