--- a/index_ita.html
+++ b/index_ita.html
@@ -417,7 +417,7 @@
 
 <!-- end study -->
 
-<section id="soft_skills" class="s-works target-section">
+   <section id="soft_skills" class="s-works target-section">
 
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
@@ -435,21 +435,25 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-mechanic.jpg" class="thumb-link" title="Restaurare" data-size="1050x700">
-                                <img src="images/portfolio/mechanic.jpg" 
-                                     srcset="images/portfolio/mechanic.jpg 1x, images/portfolio/mechanic@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-mini.jpg" class="thumb-link" title="Restore" data-size="1050x700">
+                                <img src="images/portfolio/mini.jpg" 
+                                     srcset="images/portfolio/mini.jpg 1x, images/portfolio/mini@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Aggiustare la mia Auto
+                                Far vivere la mia MINI
                             </h3>
                             <p class="item-folio__cat">
                                 Restaurare
                             </p>
                         </div>
+
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                            <i class="im im-magnifier-plus"></i>
+                        </a>
 
                         <div class="item-folio__caption">
                             <p>Restaurare</p>
@@ -462,9 +466,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-sport.jpg" class="thumb-link" title="Sport" data-size="640x960">
-                                <img src="images/portfolio/sport.jpg" 
-                                     srcset="images/portfolio/sport.jpg 1x, images/portfolio/sport@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-workout.jpg" class="thumb-link" title="Sport" data-size="1050x700">
+                                <img src="images/portfolio/workout.jpg" 
+                                     srcset="images/portfolio/workout.jpg 1x, images/portfolio/workout@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -478,6 +482,9 @@
                             </p>
                         </div>
 
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                            <i class="im im-magnifier-plus"></i>
+                        </a>
 
                         <div class="item-folio__caption">
                             <p>Sport</p>
@@ -490,53 +497,28 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-dog.jpg" class="thumb-link" title="Natura" data-size="1050x700">
-                                <img src="images/portfolio/dog.jpg" 
-                                     srcset="images/portfolio/dog.jpg 1x, images/portfolio/dog@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-salad.jpg" class="thumb-link" title="Cooking Passion" data-size="1050x700">
+                                <img src="images/portfolio/salad.jpg" 
+                                     srcset="images/portfolio/salad.jpg 1x, images/portfolio/salad@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Amante degli animali
+                                Food Lover
                             </h3>
                             <p class="item-folio__cat">
-                                Natura
+                                Cucinare
                             </p>
                         </div>
 
-                        <span class="item-folio__caption">
-                            <p>Natura</p>
-                        </span>
-
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
-
-                <div class="masonry__brick">
-                    <div class="item-folio">
-
-                        <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-phone.jpg" class="thumb-link" title="Tecnologia" data-size="1868x1788">
-                                <img src="images/portfolio/phone.jpg"
-                                     srcset="images/portfolio/phone.jpg 1x, images/portfolio/phone@2x.jpg 2x" alt="">
-                                <span class="shadow-overlay"></span>
-                            </a>
-                        </div>
-
-                        <div class="item-folio__text">
-                            <h3 class="item-folio__title">
-                                Tech Addicted
-                            </h3>
-                            <p class="item-folio__cat">
-                                Tecnologia
-                            </p>
-                        </div>
-
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                            <i class="im im-magnifier-plus"></i>
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Tecnologia</p>
+                            <p>Cucinare</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -546,22 +528,24 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-friends.jpg" class="thumb-link" title="Amicizia" data-size="2400x3000">
-                                <img src="images/portfolio/friends.jpg"
-                                     srcset="images/portfolio/friends.jpg 1x, images/portfolio/friends@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-friendship.jpg" class="thumb-link" title="Friendship" data-size="1050x700">
+                                <img src="images/portfolio/friendship.jpg"
+                                     srcset="images/portfolio/friendship.jpg 1x, images/portfolio/friendship@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Parlare con gli amici
+                                Avventure con Amici
                             </h3>
                             <p class="item-folio__cat">
                                 Amicizia
                             </p>
                         </div>
 
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                            <i class="im im-magnifier-plus"></i>
                         </a>
 
                         <span class="item-folio__caption">
@@ -575,9 +559,40 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-liberty.jpg" class="thumb-link" title="Viaggiare" data-size="1050x700">
-                                <img src="images/portfolio/liberty.jpg"
-                                     srcset="images/portfolio/liberty.jpg 1x, images/portfolio/liberty@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-dog.jpg" class="thumb-link" title="Nature" data-size="1050x700">
+                                <img src="images/portfolio/dog.jpg"
+                                     srcset="images/portfolio/dog.jpg 1x, images/portfolio/dog@2x.jpg 2x" alt="">
+                                <span class="shadow-overlay"></span>
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                Amante degli Animali
+                            </h3>
+                            <p class="item-folio__cat">
+                                Natura
+                            </p>
+                        </div>
+
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                            <i class="im im-magnifier-plus"></i>
+                        </a>
+
+                        <span class="item-folio__caption">
+                            <p>Natura</p>
+                        </span>
+
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
+
+                <div class="masonry__brick">
+                    <div class="item-folio">
+
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/gallery/g-travels.jpg" class="thumb-link" title="Travels" data-size="1050x700">
+                                <img src="images/portfolio/travels.jpg"
+                                     srcset="images/portfolio/travels.jpg 1x, images/portfolio/travels@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -591,6 +606,8 @@
                             </p>
                         </div>
 
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                            <i class="im im-magnifier-plus"></i>
                         </a>
 
                         <span class="item-folio__caption">
@@ -600,13 +617,42 @@
                     </div> <!-- end item-folio -->
                 </div> <!-- end masonry__brick -->
 
+                <div class="masonry__brick">
+                    <div class="item-folio">
 
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/gallery/g-tech.jpg" class="thumb-link" title="Technology" data-size="1050x700">
+                                <img src="images/portfolio/tech.jpg"
+                                     srcset="images/portfolio/tech.jpg 1x, images/portfolio/tech@2x.jpg 2x" alt="">
+                                <span class="shadow-overlay"></span>
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                Tech Addicted
+                            </h3>
+                            <p class="item-folio__cat">
+                                Tecnologia
+                            </p>
+                        </div>
+
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                            <i class="im im-magnifier-plus"></i>
+                        </a>
+
+                        <span class="item-folio__caption">
+                            <p>Tecnologia</p>
+                        </span>
+
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
 
                 <div class="masonry__brick">
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-shutterbug.jpg" class="thumb-link" title="Fotografia" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-shutterbug.jpg" class="thumb-link" title="Photography" data-size="1050x700">
                                 <img src="images/portfolio/shutterbug.jpg"
                                      srcset="images/portfolio/shutterbug.jpg 1x, images/portfolio/shutterbug@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -615,12 +661,16 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Catturare momenti unici
+                                Immortalare momenti unici
                             </h3>
                             <p class="item-folio__cat">
                                 Fotografia
                             </p>
                         </div>
+
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                            <i class="im im-magnifier-plus"></i>
+                        </a>
 
                         <span class="item-folio__caption">
                             <p>Fotografia</p>
@@ -632,7 +682,7 @@
             </div>
         </div> <!-- end masonry -->
 
-    </section> <!-- end works -->
+    </section> <!-- end softakills -->
 
 
 
