puliziare  ref link e restore icone

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
@@ -481,7 +481,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
@@ -512,7 +512,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
@@ -543,7 +543,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
@@ -574,7 +574,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
@@ -605,7 +605,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
@@ -636,7 +636,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
@@ -667,7 +667,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
