--- a/index_ita.html
+++ b/index_ita.html
@@ -451,7 +451,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
@@ -482,7 +482,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
@@ -513,7 +513,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
@@ -544,7 +544,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
@@ -575,7 +575,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
@@ -606,7 +606,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
@@ -637,7 +637,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
@@ -668,7 +668,7 @@
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                        <a class="item-folio__project-link" title="Zoom">
                             <i class="im im-magnifier-plus"></i>
                         </a>
 
