--- a/index_ita.html
+++ b/index_ita.html
@@ -84,7 +84,7 @@
                 <li><a class="smoothscroll"  href="#about" title="Chi sono">Chi sono</a></li>
                 <li><a class="smoothscroll"  href="#works" title="Lavori">Lavori</a></li>
                 <li><a class="smoothscroll"  href="#study" title="Studi">Studi</a></li>
-                <li><a class="smoothscroll"  href="#soft_skills" title="Skills">Soft Skills</a></li>
+                <li><a class="smoothscroll"  href="#soft_skills" title="Skills">Passioni</a></li>
 <!--
                 <li><a class="smoothscroll"  href="#blog" title="blog">Blog</a></li>
 -->
@@ -444,10 +444,10 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Far vivere la mia MINI
+                                Aggiustare la mia MINI
                             </h3>
                             <p class="item-folio__cat">
-                                Restaurare
+                                Restauro
                             </p>
                         </div>
 
@@ -456,7 +456,7 @@
                         </a>
 
                         <div class="item-folio__caption">
-                            <p>Restaurare</p>
+                            <p>Restauro</p>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -509,7 +509,7 @@
                                 Food Lover
                             </h3>
                             <p class="item-folio__cat">
-                                Cucinare
+                                Cucina
                             </p>
                         </div>
 
@@ -518,7 +518,7 @@
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Cucinare</p>
+                            <p>Cucina</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -540,7 +540,7 @@
                                 Avventure con Amici
                             </h3>
                             <p class="item-folio__cat">
-                                Amicizia
+                                Amici
                             </p>
                         </div>
 
@@ -549,7 +549,7 @@
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Amicizia</p>
+                            <p>Amici</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -602,7 +602,7 @@
                                 Scoprire nuove culture
                             </h3>
                             <p class="item-folio__cat">
-                                Viaggiare
+                                Viaggi
                             </p>
                         </div>
 
@@ -611,7 +611,7 @@
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Viaggiare</p>
+                            <p>Viaggi</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -733,8 +733,8 @@
                 <div class="testimonials__slide">
                     <img src="images/avatars/Francesco_Costanza_img.jpg" alt="Author image" class="testimonials__avatar">
                     <p>Ho avuto il piacere di lavorare con Davide presso la OneNet srl. <br>
-                    Ha una spiccata mentalità commerciale e un'eccellente 
-                    capacità di interfacciarsi con i clienti. </p>
+                    Ha una spiccata mentalità commerciale e un'eccellente capacità di interfacciarsi 
+                    con i clienti. </p>
                     <div class="testimonials__author h06">
                         Francesco Costanza
                         <span>Key Account Manager, OneNet Srl</span>
