--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                         <div class="timeline__header">
                             <p class="timeline__timeframe">September 2013 - August 2014 (1 Year)</p>
                             <h3>Planet consulting s.r.l.</h3>
-                            <h5>International Buyer Searche</h5>
+                            <h5>International Buyer Searcher</h5>
                         </div>
                         <div class="timeline__desc">
                             <p>ACTIVITIES:<br>
