--- a/index_ita.html
+++ b/index_ita.html
@@ -311,7 +311,7 @@
                         <div class="timeline__header">
                             <p class="timeline__timeframe">Settembre 2013 - Agosto 2014 (1 Anno)</p>
                             <h3>Planet consulting s.r.l.</h3>
-                            <h5>International Buyer Searche</h5>
+                            <h5>International Buyer Searcher</h5>
                         </div>
                         <div class="timeline__desc">
                             <p>ATTIVITÀ:<br>
