--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="row about-content about-content--buttons">
 
             <div class="col-six tab-full left">
-                <a href="Cv/CV_DavideGiagnacovo.pdf" target="_blank" class="btn btn--primary full-width">Download My CV</a>
+                <a href="Cv/Cv Davide Giagnacovo - ENG.pdf" target="_blank" class="btn btn--primary full-width">Download My CV</a>
             </div>
             <div class="col-six tab-full right">
                 <a href="#contact" class="smoothscroll btn btn full-width">Hire Me Now</a>
