--- a/index_ita.html
+++ b/index_ita.html
@@ -219,7 +219,7 @@
         <div class="row about-content about-content--buttons">
 
             <div class="col-six tab-full left">
-                <a href="Cv/CV_DavideGiagnacovo.pdf" target="_blank" class="btn btn--primary full-width">Scarica il mio CV</a>
+                <a href="Cv/Cv Davide Giagnacovo - IT.pdf" target="_blank" class="btn btn--primary full-width">Scarica il mio CV</a>
             </div>
             <div class="col-six tab-full right">
                 <a href="#contact" class="smoothscroll btn btn full-width">Scrivimi</a>
