--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <meta property="og:url"content="https://davidegiagnacovo.com" />
 	<meta property="og:title" content="Davide Giagnacovo - Resume WebSite" />
-	<meta property="og:description" content="Howdy, I'm Davide Giagnacovo and this is my resume website. Discover my experiences and my skills, I'm sure you will like them." />
+	<meta property="og:description" content="Howdy, I'm Davide Giagnacovo and this is my resume website." />
 	<meta property="og:image" content="https://davidegiagnacovo.com/immagine sociale.jpg" />
 
 
