--- a/index_ita.html
+++ b/index_ita.html
@@ -115,7 +115,7 @@
                 <h3>Ciao a tutti</h3>
                 <h1>
                     Sono Davide Giagnacovo, <br>
-                    un Business Developer & Marketing Specialist.
+                    Business Developer & Marketing Specialist.
                     
                 </h1>
 
