image_open_graph

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <meta property="og:url"content="https://davidegiagnacovo.com" />
 	<meta property="og:title" content="Davide Giagnacovo - Resume WebSite" />
 	<meta property="og:description" content="Howdy, I'm Davide Giagnacovo and this is my resume website." />
-	<meta property="og:image" content="https://davidegiagnacovo.com/immagine sociale.jpg" />
+	<meta property="og:image" content="https://davidegiagnacovo.com/image_open_graph.jpg" />
 
 
     <!-- mobile specific metas
