--- a/index_ita.html
+++ b/index_ita.html
@@ -44,7 +44,7 @@
     <meta property="og:url"content="https://davidegiagnacovo.com/index_ita.html" />
     <meta property="og:title" content="Davide Giagnacovo - CV WebSite" />
     <meta property="og:description" content="Salve, sono Davide Giagnacovo e questo è il mio sito web. Scopri le mie esperienze e le mie skills, sono certo che ti piaceranno." />
-    <meta property="og:image" content="https://davidegiagnacovo.com/immagine sociale.jpg" />
+    <meta property="og:image" content="https://davidegiagnacovo.com/image_open_graph.jpg" />
 
     <!-- mobile specific metas
     ================================================== -->
