--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<!--- facebook open graph
     ================================================== -->
 
-    <meta property="og:url"content="https://davidegiagnacovo.com" />
+    <meta property="og:url"content="Davidegiagnacovo.com" />
 	<meta property="og:title" content="Davide Giagnacovo - Resume WebSite" />
 	<meta property="og:description" content="Howdy, I'm Davide Giagnacovo and this is my resume website." />
 	<meta property="og:image" content="https://davidegiagnacovo.com/image_open_graph.jpg" />
