--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
                 </h1>
 
                 <div class="home-content__buttons">
+                    <a href="#works" class="smoothscroll btn btn--stroke">
+                        Work Experience
+                    </a>
                     <a href="#about" class="smoothscroll btn btn--stroke">
                         More About Me
-                    </a>
-                    <a href="Cv/Cv Davide Giagnacovo - ENG.pdf" target="_blank" class="smoothscroll btn btn--stroke">
-                        Download my CV
                     </a>
                 </div>
 
