--- a/index_ita.html
+++ b/index_ita.html
@@ -980,11 +980,9 @@
                 <p><a href="mailto:Davide.Giagnacovo@gmail.com">Davide.Giagnacovo@gmail.com
                 </p>
 
-                <h4 class="h06">Via</h4>
-                <p><a href="https://goo.gl/maps/peboqv9FQnmoThPa8" target="_blank">
-                Viale Papa Pio XII, n°14<br>
-                70124, Bari<br>
-                Italy
+                <h4 class="h06">Città</h4>
+                <p><a href="https://goo.gl/maps/ThZc6mo2PbeNhJNf6" target="_blank">
+                Bari
                 </p>
             </div>
 
