--- a/index.html
+++ b/index.html
@@ -978,11 +978,9 @@
                 <p><a href="mailto:Davide.Giagnacovo@gmail.com">Davide.Giagnacovo@gmail.com
                 </p>
 
-                <h4 class="h06">Address</h4>
-                <p><a href="https://goo.gl/maps/peboqv9FQnmoThPa8" target="_blank">
-                Viale Papa Pio XII, n°14<br>
-                70124, Bari<br>
-                Italy
+                <h4 class="h06">City</h4>
+                <p><a href="https://goo.gl/maps/ThZc6mo2PbeNhJNf6" target="_blank">
+                Bari
                 </p>
             </div>
 
