--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
                 I chose this profession because I think it suits me perfectly. In my opinion the Web is the best tool to get in touch with customers, therefore digital marketing is a perfect way to increase Sales.<br><br>
 
-                In my job I’m focused on the communication with costumers working in teams, which is always a good way to grow professionally and learn new things. Furthermore I like to improve my skills and to expand my knowledge through my propensity to study.<br><br>
+                In my job I’m focused on the communication with costumers and working in teams, which is always a good way to grow professionally and learn new things. Furthermore I like to improve my skills and to expand my knowledge through my propensity to study.<br><br>
 
                 I love everything that means innovation and experimentation.
                 </p>
